// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigStats Component Render the ConfigStats Component having populated props with no errors 1`] = `
<ConfigStats
  proposals={
    Array [
      Object {
        "instruments": Object {
          "bvit": Array [
            Object {
              "type": "BVIT",
            },
          ],
          "hrs": Array [
            Object {
              "exposureMode": "HIGH RESOLUTION",
            },
          ],
          "rss": Array [
            Object {
              "dictatorMode": "NORMAL",
              "mode": "Spectroscopy",
            },
          ],
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2018-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Clear",
      },
      Object {
        "instruments": Object {
          "bvit": Array [
            Object {
              "type": "BVIT",
            },
          ],
          "hrs": Array [
            Object {
              "exposureMode": "HIGH RESOLUTION",
            },
          ],
          "rss": Array [
            Object {
              "dictatorMode": "NORMAL",
              "mode": "Spectroscopy",
            },
          ],
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2017-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Thin cloud",
      },
    ]
  }
>
  <div>
    <h1>
      Configuration Statistics
    </h1>
    <table
      className="table center-table"
    >
      <thead>
        <tr>
          <th>
            <h2>
              Instruments
            </h2>
          </th>
          <th>
            <h2>
              Number of Proposals
            </h2>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h2>
              RSS
            </h2>
          </td>
          <td>
            <h2>
              2
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              SALTICAM
            </h2>
          </td>
          <td>
            <h2>
              2
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              HRS
            </h2>
          </td>
          <td>
            <h2>
              2
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              BVIT
            </h2>
          </td>
          <td>
            <h2>
              2
            </h2>
          </td>
        </tr>
      </tbody>
    </table>
    <h2>
      Salticam
    </h2>
    <table
      className="table center-table"
    >
      <thead>
        <tr>
          <th>
            <h2>
              Detector mode
            </h2>
          </th>
          <th>
            <h2>
              Number of Proposals
            </h2>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h2>
              DRIFT SCAN
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              FRAME XFER
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              NORMAL
            </h2>
          </td>
          <td>
            <h2>
              2
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              SLOT
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
      </tbody>
    </table>
    <h2>
      RSS
    </h2>
    <table
      className="table center-table"
    >
      <thead>
        <tr>
          <th>
            <h2>
              Detector mode
            </h2>
          </th>
          <th>
            <h2>
              Number of Proposals
            </h2>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h2>
              DRIFT SCAN
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              FRAME TRANSFER
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              NORMAL
            </h2>
          </td>
          <td>
            <h2>
              2
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              SHUFFLE
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              SLOT MODE
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
      </tbody>
      <thead>
        <tr>
          <th>
            <h2>
              Observing mode
            </h2>
          </th>
          <th>
            <h2>
              Number of Proposals
            </h2>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h2>
              Fabry Perot
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              FP polarimetry
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              MOS
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              MOS polarimetry
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              Polarimetric imaging
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              Imaging
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              Spectropolarimetry
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              Spectroscopy
            </h2>
          </td>
          <td>
            <h2>
              2
            </h2>
          </td>
        </tr>
      </tbody>
    </table>
    <h2>
      HRS
    </h2>
    <table
      className="table center-table"
    >
      <thead>
        <tr>
          <th>
            <h2>
              Exposure mode
            </h2>
          </th>
          <th>
            <h2>
              Number of Proposals
            </h2>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h2>
              HIGH RESOLUTION
            </h2>
          </td>
          <td>
            <h2>
              2
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              HIGH STABILITY
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              INT CAL FIBRE
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              LOW RESOLUTION
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              MEDIUM RESOLUTION
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</ConfigStats>
`;

exports[`ConfigStats Component Render the ConfigStats Component having unpopulated props with no errors 1`] = `
<ConfigStats
  proposals={Array []}
>
  <div>
    <h1>
      Configuration Statistics
    </h1>
    <table
      className="table center-table"
    >
      <thead>
        <tr>
          <th>
            <h2>
              Instruments
            </h2>
          </th>
          <th>
            <h2>
              Number of Proposals
            </h2>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h2>
              RSS
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              SALTICAM
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              HRS
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              BVIT
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
      </tbody>
    </table>
    <h2>
      Salticam
    </h2>
    <table
      className="table center-table"
    >
      <thead>
        <tr>
          <th>
            <h2>
              Detector mode
            </h2>
          </th>
          <th>
            <h2>
              Number of Proposals
            </h2>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h2>
              DRIFT SCAN
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              FRAME XFER
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              NORMAL
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              SLOT
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
      </tbody>
    </table>
    <h2>
      RSS
    </h2>
    <table
      className="table center-table"
    >
      <thead>
        <tr>
          <th>
            <h2>
              Detector mode
            </h2>
          </th>
          <th>
            <h2>
              Number of Proposals
            </h2>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h2>
              DRIFT SCAN
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              FRAME TRANSFER
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              NORMAL
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              SHUFFLE
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              SLOT MODE
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
      </tbody>
      <thead>
        <tr>
          <th>
            <h2>
              Observing mode
            </h2>
          </th>
          <th>
            <h2>
              Number of Proposals
            </h2>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h2>
              Fabry Perot
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              FP polarimetry
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              MOS
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              MOS polarimetry
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              Polarimetric imaging
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              Imaging
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              Spectropolarimetry
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              Spectroscopy
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
      </tbody>
    </table>
    <h2>
      HRS
    </h2>
    <table
      className="table center-table"
    >
      <thead>
        <tr>
          <th>
            <h2>
              Exposure mode
            </h2>
          </th>
          <th>
            <h2>
              Number of Proposals
            </h2>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h2>
              HIGH RESOLUTION
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              HIGH STABILITY
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              INT CAL FIBRE
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              LOW RESOLUTION
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
        <tr>
          <td>
            <h2>
              MEDIUM RESOLUTION
            </h2>
          </td>
          <td>
            <h2>
              0
            </h2>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</ConfigStats>
`;
